--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-base64": "~2.0.5"
+    "angular-base64": "~2.0.5",
+    "ng-file-upload": "~9.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
