--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-base64": "~2.0.5",
-    "ng-file-upload": "~9.1.1"
+    "ng-file-upload": "~9.1.1",
+    "ngstorage": "~0.3.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
