--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "angular-base64": "~2.0.5",
     "ng-file-upload": "~9.1.1",
-    "ngstorage": "~0.3.9"
+    "ngstorage": "~0.3.9",
+    "oauth-js": "oauthio-web#~0.4.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
