--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-base64": "~2.0.5",
     "ng-file-upload": "~9.1.1",
     "ngstorage": "~0.3.9",
-    "oauth-js": "oauthio-web#~0.4.8"
+    "oauth-js": "oauthio-web#~0.4.8",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
