--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "ng-file-upload": "~9.1.1",
     "ngstorage": "~0.3.9",
     "oauth-js": "oauthio-web#~0.4.8",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "ment.io": "~0.9.24"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
