--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,11 @@
     "ngstorage": "~0.3.9",
     "oauth-js": "oauthio-web#~0.4.8",
     "underscore": "~1.8.3",
-    "ment.io": "~0.9.24"
+    "ment.io": "~0.9.24",
+    "socket.io-client": "~1.3.7",
+    "angular-socket-io": "~0.7.0",
+    "angulike": "~1.2.0",
+    "angular-socialshare": "~1.4.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
